--- a/PlantTracker/App.xaml
+++ b/PlantTracker/App.xaml
@@ -1,7 +1,7 @@
-<?xml version = "1.0" encoding = "UTF-8" ?>
+﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:PlantTracker"
+             xmlns:converters="clr-namespace:PlantTracker.Converters"
              x:Class="PlantTracker.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +9,8 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:IsNotNullConverter x:Key="IsNotNullConverter"/>
+            <converters:InvertedBoolConverter x:Key="InvertedBoolConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
